--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "astro": "^5.16.11",
+    "astro": "^6.0.0-beta.2",
     "lucide-react": "^0.562.0",
     "tailwindcss": "^4.1.18"
   }
